kubernetes/production/apps/default/zigbee2mqtt/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  nodeSelector:
    kubernetes.io/hostname: "talos-taz-s45"
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - image: koenkk/zigbee2mqtt:1.42.0
          name: zigbee2mqtt
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
            - name: usb
              mountPath: /dev/ttyUSB0
            - name: udev
              mountPath: /run/udev
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          securityContext:
            privileged: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
        - name: usb
          hostPath:
            path: /dev/ttyUSB0
        - name: udev
          hostPath:
            path: /run/udev
